name: habs
version: 0.0.2

license: BSD3
license-file: LICENSE
author: Nikolaos Bezirgiannis
maintainer: Nikolaos Bezirgiannis <bezirgia@cwi.nl>
copyright: Copyright (c) 2013-2016, Envisage Consortium
homepage: http://abs-models.org
bug-reports: https://github.com/abstools/habs/issues

stability: provisional
tested-with: GHC == 8.0.2, GHC == 8.2.2
build-type: Simple
cabal-version: >= 1.8

category: Concurrency, Distributed Computing
synopsis: A Haskell library to translate ABS programs to Haskell equivalent code
description:
  A Haskell library to translate ABS programs to Haskell equivalent code.
  todo

extra-source-files:
  README.md

source-repository head
  type: git
  location: git://github.com/abstools/habs.git
  branch: master

executable habs
  main-is: habs.hs
  build-depends:
    -- base<=4.6 (i.e. GHC<=7.6.3) not supported because of no `tryReadMVar`
    -- base<=4.7 (i.e. GHC<=7.8.4) not supported because of generated code relies on PartialTypeSignatures
    -- base==4.8 has a bug on PartialTypeSignatures, so we allow base>=4.9, i.e. GHC>=8
    base >= 4.9 && < 5,
    habs-parser,
    -- for outputting a Haskell AST
    haskell-src-exts-simple < 1.20, -- broken for 1.20, HSE introduces broken changes
    haskell-src-exts-qq >= 0.8,
    -- for intermediate datastructures (e.g. symboltable)
    containers,
    -- for a Reader-monad to implement local scope
    -- for a Writer-monad to have compiler messages output
    transformers,
    -- for filepath manipulation when spitting .hs files
    filepath,
    directory,
    cmdargs,
    -- for not having to further issue the installation of ABS-runtime & stdlib dependencies
    habs-runtime
  other-modules:
    ABS.Compiler.Firstpass.Base,
    ABS.Compiler.Firstpass.SymbolTable,
    ABS.Compiler.Codegen.Base,
    ABS.Compiler.Codegen.Mod,
    ABS.Compiler.Codegen.Dec,
    ABS.Compiler.Codegen.Stm,
    ABS.Compiler.Codegen.StmExp,
    ABS.Compiler.Codegen.Exp,
    ABS.Compiler.Codegen.Typ,
    ABS.Compiler.Codegen.Pat,
    ABS.Compiler.Utils,
    ABS.Compiler.CmdOpt    
  ghc-options: -Wall -fno-warn-orphans -fno-ignore-asserts
  hs-source-dirs: src

-- TEST SUITE
-------------

test-suite golden
  type: exitcode-stdio-1.0
  main-is: golden.hs
  build-depends:
    base >= 4.8 && < 5,
    tasty, 
    tasty-hunit,
    tasty-program,
    tasty-golden,
    tasty-expected-failure,
    tasty-html,
    -- for running the ABS programs and comparing the stdout&stderr to a golden file
    process,
    habs-runtime,
    habs-parser,
    -- for outputting a Haskell AST
    haskell-src-exts-simple,
    haskell-src-exts-qq >= 0.8,
    -- for intermediate datastructures (e.g. symboltable)
    containers,
    -- for a Reader-monad to implement local scope
    -- for a Writer-monad to have compiler messages output
    transformers,
    -- for filepath manipulation when spitting .hs files
    filepath,
    directory,
    cmdargs
  hs-source-dirs: tests, src
